# bulk-rename

./: Cargo.toml  README.md
src/: main.rs
src/bulkgui/: bulk_enum.rs  bulk_gui.rs  bulk_impl.rs  bulk_update.rs  mod.rs
