[package]
name = "bulk-rename"
version = "0.9.11"
edition = "2021"
crate-type = ["dynlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct = { version = "1.6.0", features = ["alloc"] }
eframe = "0.23.0"
egui = "0.23.0"
egui_extras = "0.23.0"
faccess = "0.2.4"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
